--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.2
@@ -15,32 +13,7 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     ports:
       - "9092:9092"
-
-  publisher:
-    build:
-      context: .
-    volumes:
-      - ./data:/app/data
-    depends_on:
-      - kafka
-    command: python run_publisher.py  # Uruchamia skrypt publikujący dane do Kafka
-
-  subscriber:
-    build:
-      context: .
-    volumes:
-      - ./data:/app/data
-    depends_on:
-      - kafka
-    command: python run_subscriber.py  # Uruchamia skrypt subskrybujący dane z Kafka
-
-  faiss:
-    build:
-      context: .
-    volumes:
-      - ./data:/app/data
-    command: python run_faiss_t5.py  # Uruchamia wyszukiwanie i generowanie odpowiedzi
